<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BurnerChat</string>
    <string name="action_settings">Settings</string>
    <string name="burn">BURN</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="new_chat">New Chat</string>
    <string name="refresh_chat">Refresh</string>
    <string name="room_name">Room Name</string>
    <string name="enter_room">Enter Room</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="message">Message</string>
    <string name="message_details">
<![CDATA[<p><b>Chat Anonymously</b>
       			<br> End to End Encryption
       			<br> Burn Everything]]>
    </string>

</resources>