<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="#d9534f"
        android:text="@string/enter_room"
        android:gravity="center"
        android:padding="16dp"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"  />

    <com.beardedhen.androidbootstrap.BootstrapEditText
        android:id="@+id/chat_room_name"
        android:inputType="textNoSuggestions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/room_name" />
    
    <com.beardedhen.androidbootstrap.BootstrapEditText
        android:id="@+id/chat_room_pass"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:hint="@string/password"/>
</LinearLayout>